no sheet search

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
   "root_folder": "R:/DATABASE/FIELDBOOK",
-  "fieldbook_folder": "D:/Fieldbook",
+  "fieldbook_folder": "Y:/DATABASE/FIELDBOOK",
   "plotregister_folder": "R:/DATABASE/PLOT_RAGISTER"
 }
