reset button removed

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "root_folder": "R:/DATABASE/FIELDBOOK",
   "fieldbook_folder": "Y:/DATABASE/FIELDBOOK",
-  "plotregister_folder": "R:/DATABASE/PLOT_RAGISTER",
+  "plotregister_folder": "Z:/PLOT_RAJISTAR/buddhabhumi",
   "fieldbook_template": "G:/My Drive/My Official Documents/2082-083/\u0928\u093e\u092a\u0940 \u0915\u093e\u0930\u094d\u092f\u093e\u0932\u092f \u0915\u092a\u093f\u0932\u0935\u0938\u094d\u0924\u0941/\u092b\u093f\u0932\u094d\u0921\u092c\u0941\u0915 \u0909\u0924\u093e\u0930.docx"
 }
